generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Usuario {
  id          Int           @id @default(autoincrement())
  nombre      String        @db.VarChar(50)  @map("nombre")
  apellido    String?       @db.VarChar(50)  @map("apellido")
  ci          String?       @db.VarChar(20)  @map("ci")
  correo      String        @unique @db.VarChar(50) @map("correo")
  password    String        @db.VarChar(255)
  rol         String        @default("Operador") @db.VarChar(50) @map("rol")
  resetCode    String?      @db.VarChar(6) @map("resetCode")
  resetCodeExp DateTime?    @map("resetCodeExp")
  puntosAcceso PuntoAcceso[]
  backups     Backup[]

  @@map("Usuario")
}

model Camara {
  id              Int           @id @default(autoincrement())
  nombre          String        @db.VarChar(50)  @map("nombre")
  ubicacion       String        @db.VarChar(100) @map("ubicacion")
  tipoCamara      String        @db.VarChar(50)  @map("tipoCamara")
  estado          String        @default("activa") @db.VarChar(50) @map("estado")
  puntosIngresoAcceso PuntoAcceso[] @relation("CamaraIngreso")
  puntosSalidaAcceso  PuntoAcceso[] @relation("CamaraSalida")
  alertas         Alerta[]

  @@map("Camara")
}

model Vehiculo {
  id              Int              @id @default(autoincrement())
  placa           String           @unique @db.VarChar(20) @map("placa")
  marca           String?          @db.VarChar(100) @map("marca")
  modelo          String?          @db.VarChar(100) @map("modelo")
  tipoVehiculo    String?          @db.VarChar(50) @map("tipoVehiculo")
  color           String?          @db.VarChar(50) @map("color")
  caracteristicas String?          @db.VarChar(500) @map("caracteristicas")
  sanciones       Sancion[]
  registrosAcceso RegistroAcceso[]

  @@index([placa])
  @@map("Vehiculo")
}

model PuntoAcceso {
  id               Int              @id @default(autoincrement())
  nombre           String           @db.VarChar(100) @map("nombre")
  ubicacion        String           @db.VarChar(255) @map("ubicacion")
  descripcion      String?          @db.VarChar(255) @map("descripcion")
  estado           String           @default("activo") @db.VarChar(50) @map("estado")
  camaraIngresoId  Int?             @unique @map("camaraIngresoId")
  camaraSalidaId   Int?             @unique @map("camaraSalidaId")
  usuarioId        Int?             @map("usuarioId")
  camaraIngreso    Camara?          @relation("CamaraIngreso", fields: [camaraIngresoId], references: [id])
  camaraSalida     Camara?          @relation("CamaraSalida", fields: [camaraSalidaId], references: [id])
  usuario          Usuario?         @relation(fields: [usuarioId], references: [id])
  registrosIngreso RegistroAcceso[] @relation("PuntoAccesoIngreso")
  registrosEgreso  RegistroAcceso[] @relation("PuntoAccesoEgreso")

  @@map("PuntoAcceso")
}

model RegistroAcceso {
  id                   Int          @id @default(autoincrement())
  vehiculoId           Int          @map("vehiculoId")
  puntoAccesoIngresoId Int?         @map("puntoAccesoIngresoId")
  puntoAccesoEgresoId  Int?         @map("puntoAccesoEgresoId")
  horaIngreso          DateTime     @map("horaIngreso")
  horaSalida           DateTime?    @map("horaSalida")
  fecha                DateTime     @default(now()) @map("fecha")
  urlEvidencia         String?      @db.VarChar(500) @map("urlEvidencia")
  estado               String       @db.VarChar(20) @map("estado")
  vehiculo             Vehiculo     @relation(fields: [vehiculoId], references: [id], onDelete: Cascade)
  plazaId              Int?         @map("plazaId")
  puntoAccesoIngreso   PuntoAcceso? @relation("PuntoAccesoIngreso", fields: [puntoAccesoIngresoId], references: [id], onDelete: SetNull)
  puntoAccesoEgreso    PuntoAcceso? @relation("PuntoAccesoEgreso", fields: [puntoAccesoEgresoId], references: [id], onDelete: SetNull)
  plaza                Plaza?       @relation(fields: [plazaId], references: [id], onDelete: SetNull)

  @@index([vehiculoId])
  @@index([fecha])
  @@map("RegistroAcceso")
}

model Backup {
  id        Int      @id @default(autoincrement())
  usuarioId Int      @map("usuarioId")
  fecha     DateTime @default(now()) @map("fecha")
  url       String   @db.VarChar(500) @map("url")
  usuario   Usuario  @relation(fields: [usuarioId], references: [id])

  @@map("Backup")
}

model TipoSancion {
  id           Int       @id @default(autoincrement())
  nombre       String    @db.VarChar(100) @map("nombre")
  motivo       String    @db.VarChar(200) @map("motivo")
  duracionDias Int       @map("duracionDias")
  sanciones    Sancion[]

  @@map("TipoSancion")
}

model Sancion {
  id            Int          @id @default(autoincrement())
  vehiculoId    Int          @map("vehiculoId")
  tipoSancionId Int          @map("tipoSancionId")
  fechaInicio   DateTime     @default(now()) @map("fechaInicio")
  fechaFin      DateTime?    @map("fechaFin")
  vehiculo      Vehiculo     @relation(fields: [vehiculoId], references: [id], onDelete: Cascade)
  tipoSancion   TipoSancion  @relation(fields: [tipoSancionId], references: [id])

  @@map("Sancion")
}

model Alerta {
  id             Int          @id @default(autoincrement())
  tipoAlerta     String       @db.VarChar(100) @map("tipoAlerta")
  camaraId       Int?         @map("camaraId")
  creadoEn       DateTime     @default(now()) @map("creadoEn")
  estadoAlerta   String       @default("pendiente") @db.VarChar(50) @map("estadoAlerta")
  camara         Camara?      @relation(fields: [camaraId], references: [id], onDelete: SetNull)

  @@map("Alerta")
}

model Parqueo {
  id         Int     @id @default(autoincrement())
  nombre     String  @db.VarChar(100) @map("nombre")
  ubicacion  String  @db.VarChar(150) @map("ubicacion")
  tipo       String  @db.VarChar(30)  @map("tipo")
  plazas     Plaza[]

  @@map("Parqueo")
}

model Plaza {
  id              Int              @id @default(autoincrement())
  parqueoId       Int              @map("parqueoId")
  codigo          String           @db.VarChar(20) @map("codigo")
  tipo            String           @db.VarChar(30) @map("tipo")
  estado          String           @default("libre") @db.VarChar(20) @map("estado")
  parqueo         Parqueo          @relation(fields: [parqueoId], references: [id], onDelete: Cascade)
  registrosAcceso RegistroAcceso[]

  @@map("Plaza")
}
